<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App name-->
    <string name="app_name">UniteNFC</string>
    <!--CLIENT ID-->
    <string name="client_id">2886137d-5535-444b-82c9-9826d8025deb</string>
    <!-- Internet warnings -->
    <string name="internet_no_connection">Network Settings</string>
    <string name="internet_required">Internet connection required</string>
    <string name="internet_failure">Connection failure</string>
    <!-- Tabs -->
    <string name="map_tab">MAP</string>
    <string name="nfc_points_tab">NFC POINTS</string>
    <string name="social_tab">SOCIAL</string>
    <!-- Action bar -->
    <string name="nfc_action">Choose visible NFC Points</string>
    <string name="map_action">Switch map type</string>
    <string name="centre_action">Centre map</string>
    <!-- Menu -->
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Instructions</string>
    <string name="action_report">Report bug</string>
    <string name="action_exit">Log out</string>
    <!-- Login message -->
    <string name="welcome">Loading user data...</string>
    <string name="invalid">Not valid!</string>
    <!-- Map tab -->
    <string name="stick_man">I\'m here!</string>
    <!-- Scan tab -->
    <string name="bttn_scan">New NFC Point</string>
    <string name="last_visited">Last NFC Points visited:</string>
    <string name="last_registered">Last NFC Points registered:</string>
    <string name="nfc_error">Please, enable NFC in your settings</string>
    <string name="default_visited">No NFC Point visited/registered yet</string>
    <string name="nfc_duplicated">NFC Point already registered</string>
    <string name="wall_private">Hide content</string>
    <!-- Social tab -->
    <string name="bttn_add_friend">Add Friend</string>
    <string name="add_friend_ms">Tap and add friends</string>
    <string name="beam">Beam your User Card to add a friend</string>
    <string name="add_already">You are already friends!</string>
    <string name="contacts">Contacts:</string>
    <!-- Gallery button -->
    <string name="gallery">Gallery</string>
    <!-- About -->
    <string name="about">UniteNFC v1.0\n\nQuick instructions:\nUniteNFC allows you to register NFC tags in a geo location based cloud. The physical tag id will be its main identificator in such a way only one registration can be made for each tag (to keep a bind between tags and registered NFC Points).\nThe registered NFC Points will be shown in the map around the user location. The discoverable range can be modify in "Settings". To scan a tag you just need to tap the mobile over the tag with NFC enabled (only text\plain MIME type supported by the moment). The last ten scanned and registered NFC Points will be shown in the tab "NFC POINTS" ordered from most recent.\nTo register a NFC Point you just need to click on the "SCAN" button and tap on the desired tag (provided the tag is not already registered). Then fill in the data and press "Register". The NFC Point will be automatically shown both on the "MAP" and on the last ten registered NFC Points.\nLast tab will show your friends, for which you can check its name, profile picture (both selectable in "Settings") and last scanned tag. To do so you just need to press on the desired element of the list.\nAdding friends is fast and cool. Press "ADD FRIEND" and your own contact info will be shown along with a message informing you to beam (NFC Android Beam) the screen to add a friend. If you do so (the other device does not need to have the application running) an interchange of contact info will be made, being recorded on your friend list.\nTo close UniteNFC user session press menu button and then exit. Next time you launch the application you will required to input your login and password again (you can change user if you want so).\nNote:Sometimes on application start the map will not be centered, specially when the location is given by the network provided. In that case press the "CENTER" button (right corner) to center it manually.</string>
    <!-- Hints -->
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <!-- Toasts -->
    <string name="not_found">Not found</string>
    <!-- Dialogs -->
    <string name="new_nfc">New NFC Point. Register?</string>
    <string name="new_nfc_fill">Fill all the data</string>
    <string name="new_nfc_ok">Register</string>
    <string name="new_nfc_no">Cancel</string>
    <string name="reg_nfc">Tap tag to register</string>
    <string name="reg_nfc_wait">Waiting...</string>
    <string name="loading">Loading...</string>
    <!-- Sharing -->
    <string name="share_1">Just scanned a NFC Point</string>
    <string name="share_2">with UniteNFC.</string>
    <string name="share_friend">Just become friend with </string>
    <string name="share_unite">Join and share your NFC experience with UniteNFC.</string>
    <string name="share_explore">Exploring NFC Points with UniteNFC.</string>
    <string name="share_undef">Last NFC Point checked: </string>
    <!-- Facebook -->
    <string name="fb_app_id">480588798692205</string>
    <string name="fb_reminder">Don\'t show again</string>
    <string name="fb_negative">Not now</string>
    <string name="fb_salutation">Hello </string>
    <string name="fb_share_nfcp">NFC Point </string>
    <string name="fb_share_registered"> just registered of type </string>
    <string name="fb_share_visited"> just visited of type </string>
    <!-- Wall -->
    <string name="bttn_wall">Go to NFC Point wall</string>
    <string name="tag_content">Tag content</string>
    <string name="wall_comments">Comments:</string>
    <string name="mean_rating">Mean:</string>
    <string name="rate">¡Rate!</string>
    <string name="tag_privacy">Hidden</string>
    <string name="wall_title">Title</string>
    <string name="wall_description">Description</string>
    <string name="last_seen">Last seen:</string>
    <string name="tag_date">00/00/0000</string>
    <string name="tag_address">Direction</string>
    <string name="add_newcomment">+ Add comment</string>
    <string name="comment_hint">Add your comment</string>
    <string name="empty_wall">No comments yet</string>
    <string name="make_public">Show content in wall</string>
    <string name="make_private">Hide content</string>
    <string name="wall_not_found">NFC Point not registered</string>
    <!-- Add comment dialog -->
    <string name="dialog_add_comment">Add comment</string>
    <string name="dialog_empty_comment">Write something</string>
    <string name="dialog_comment_deleted">Comment deleted</string>
    <string name="dialog_delete">Delete</string>
    <!-- Report bug -->
    <string name="report_title">Bug</string>
    <string name="report_send">Send</string>
    <string name="report_ok">Correctly sent</string>
    <string name="report_fail">Something went wrong, try again</string>
    <!-- Rate messages -->
    <string name="rating_sent">Rating sent</string>
    <string name="rating_empty">Rate first, please</string>
    <!-- Notifications -->
    <string name="notification_text">NFC Point close by</string>

</resources>