<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item 	android:id="@+id/menu_share"
    		android:actionProviderClass="android.widget.ShareActionProvider"
          	android:title="@string/action_share"
          	android:showAsAction="ifRoom"/>
	    
	<item 	android:id="@+id/POI"
          	android:icon="@drawable/scan_tab"
          	android:title="@string/nfc_points_tab"
          	android:showAsAction="always"/>
	
    <item 	android:id="@+id/map_type"
          	android:icon="@drawable/map_tab"
          	android:title="@string/map_action"
          	android:showAsAction="always"/>
    <item 	android:id="@+id/center"
          	android:icon="@drawable/center"
          	android:title="@string/centre_action"
          	android:showAsAction="always"/>
    
    <item 	android:id="@+id/settings"
          	android:title="@string/action_settings"
          	android:showAsAction="never"/>
    
	<item 	android:id="@+id/about"
          	android:title="@string/action_about"
          	android:showAsAction="never"/>


</menu>